@@ -169,7 +169,7 @@ class Emitter(object):
         self.prefixed_colon = self.colon if prefix_colon is None else prefix_colon + self.colon
         # single entry mappings in flow sequence
         self.brace_single_entry_mapping_in_flow_sequence = (
-            brace_single_entry_mapping_in_flow_sequence
+         brace_single_entry_mapping_in_flow_sequence
         )  # NOQA
 
         # Formatting details.
@@ -410,8 +410,11 @@ class Emitter(object):
                 and self.sequence_context
             ):
                 self.sequence_context = False
-            if root and isinstance(self.event, ScalarEvent) \
-               and not self.scalar_after_indicator:
+            if (
+                root
+                and isinstance(self.event, ScalarEvent)
+                and not self.scalar_after_indicator
+            ):
                 self.write_indent()
             self.process_tag()
             if isinstance(self.event, ScalarEvent):
@@ -917,14 +920,14 @@ class Emitter(object):
         start = end = 0
         if prefix[0] == u'!':
             end = 1
+        ch_set = u"-;/?:@&=+$,_.~*'()[]"
+        if self.dumper:
+            version = getattr(self.dumper, 'version', (1, 2))
+            if version is None or version >= (1, 2):
+                ch_set += u'#'
         while end < len(prefix):
             ch = prefix[end]
-            if (
-                u'0' <= ch <= u'9'
-                or u'A' <= ch <= u'Z'
-                or u'a' <= ch <= u'z'
-                or ch in u"-;/?!:@&=+$,_.~*'()[]"
-            ):
+            if u'0' <= ch <= u'9' or u'A' <= ch <= u'Z' or u'a' <= ch <= u'z' or ch in ch_set:
                 end += 1
             else:
                 if start < end:
