@@ -1,3 +1,8 @@
+[0, 16, 4]: 2019-08-16
+  - fix output of TAG directives with # (reported by `Thomas Smith
+    <https://bitbucket.org/%7Bd4c57a72-f041-4843-8217-b4d48b6ece2f%7D/>`__)
+
+
 [0, 16, 3]: 2019-08-15
   - move setting of version based on YAML directive to scanner, allowing to
     check for file version during TAG directive scanning
